@@ -1,3 +1,6 @@
+2009-03-17
+	* Variable/Attributes of Case.
+	
 2009-03-16
 	* The default order of codes is alphabetical.
 	* minor bug of "Add" buttons.
